Applying patch for RAVE-457
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1245216 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -167,6 +167,25 @@ page.profile.edit.option=Edit Your Profile Here
 page.profile.save=Save
 page.profile.cancel=Cancel
 
+page.personProfile.title={0}''s Profile
+page.personProfile.personal.info=Personal Information
+page.personProfile.first.name=First Name: 
+page.personProfile.last.name=Last Name: 
+page.personProfile.display.name=Display Name: 
+page.personProfile.basic.info=Basic Information
+page.personProfile.about.me=About Me: 
+page.personProfile.status=Status: 
+page.personProfile.contact.info=Contact Information
+page.personProfile.email=Email ID: 
+page.personProfile.posts=Posts
+page.personProfile.posts.page=/WEB-INF/jsp/views/profile_posts.jsp
+page.personProfile.about=About
+page.personProfile.about.page=/WEB-INF/jsp/views/profile_about.jsp
+page.personProfile.widgets=Widgets
+page.personProfile.widgets.page=/WEB-INF/jsp/views/profile_widgets.jsp
+page.personProfile.find.friends=Find Friends
+page.personProfile.friends.page=/WEB-INF/jsp/views/profile_friend_finder.jsp
+
 admin.home.title=Rave admin interface
 admin.home.shorttitle=Home
 admin.home.subtitle=Welcome to the Rave admin interface
