--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -178,6 +178,29 @@ page.profile.edit.option=Hun uw profiel hier
 page.profile.save=Behalve
 page.profile.cancel=annuleren
 
+page.personProfile.title=Profiel van {0}
+page.personProfile.personal.info=Persoonsgegevens
+page.personProfile.first.name=Voornaam: 
+page.personProfile.last.name=Achternaam: 
+page.personProfile.display.name=Naam te bezien: 
+page.personProfile.basic.info=Algemene informatie
+page.personProfile.about.me=Over mij: 
+page.personProfile.status=Burgerlijke staat: 
+page.personProfile.contact.info=Contact informatie
+page.personProfile.email=E-mail: 
+page.personProfile.posts=Posten
+page.personProfile.posts.page=/WEB-INF/jsp/views/profile_posts.jsp
+page.personProfile.about=Over mij
+page.personProfile.about.page=/WEB-INF/jsp/views/profile_about.jsp
+page.personProfile.widgets=Widgets
+page.personProfile.widgets.page=/WEB-INF/jsp/views/profile_widgets.jsp
+page.personProfile.find.friends=Vinden vrienden
+page.personProfile.friends.page=/WEB-INF/jsp/views/profile_friend_finder.jsp
+page.personProfile.edit=Hun
+page.personProfile.edit.option=Hun uw profiel hier
+page.personProfile.save=Behalve
+page.personProfile.cancel=annuleren
+
 admin.home.title=Rave admin interface
 admin.home.shorttitle=Home
 admin.home.subtitle=Welkom in de Rave admin interface
