Applied patch submitted for RAVE-147
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1292365 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -32,10 +32,15 @@ confirmPassword.mismatch=Password mismatch
 email.required=Email required
 email.invalid=This is not a valid email address
 email.exists=This email address already exists for a user
-
+email.doesnot.exist=This email address doesn't exists
+account.invalid=Invalid account. Please contact administrator.
 form.some.fields.required=Field marked with * are required
 form.all.fields.required=All fields are required.
 form.field.error.required=This field is required
+
+page.changepassword.button=Change password
+page.changepassword.title=Change password
+page.changepassword.expired=Request to change your password has been expired. Please request another password reminder.
 
 page.error.title=Rave has suffered a brief meltdown
 page.error.message=Please bear with us while we fetch some ice cubes.  In the meantime please try
@@ -103,9 +108,24 @@ page.login.rememberme=Remember me
 page.login.usernamepassword=Username and Password
 page.login.usernamepassword.fail=The username or password is incorrect.
 page.login.usernamepassword.login=Login
+page.login.forgot.password=Forgot password
+page.login.forgot.password.label=Password  reminder
+page.login.forgot.password.button=Request new password
+page.login.forgot.username=Username  reminder
+page.login.forgot.username.label=Username  reminder
+page.login.forgot.username.button=Request username
 
 page.newaccount.title=New Account Application
 page.newaccount.button=Create Account
+
+page.newpassword.title=Request new password
+page.newpassword.email.sent=An email has been sent to {0}.
+page.newpassword.email.sent.login=Click here to login
+page.newpassword.password.button=Request new password
+page.newpassword.password.title=Request new password
+page.newpassword.username.title=Request username
+
+page.retrieveusername.title=Request your username
 
 page.store.title=Widget Store
 page.store.search=Search in widget store
@@ -137,6 +157,8 @@ page.widget.rate.likes=Likes:
 page.widget.rate.dislikes=Dislikes:
 page.widget.tags.title=Tags:
 page.widget.tags.add=Add New Tag:
+page.widget.tags.or=--or--
+page.widget.tags.select=Select from list:
 
 page.addwidget.title=Add new widget
 page.addwidget.form.header=Widget
