--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -32,6 +32,13 @@ confirmPassword.mismatch=Wachtwoord komt niet overeen
 email.required=Email verplicht
 email.invalid=Dit is geen geldig email adres
 email.exists=Dit email adres bestaat al voor een gebruiker
+email.doesnot.exist=Dit email adres bestaat niet
+account.invalid=Invalid account. Please contact administrator.
+
+page.changepassword.button=Verander password
+page.changepassword.title=Verander password
+page.changepassword.expired=Request to change your password is either invalid or has been expired. Please request another password reminder.
+
 
 form.some.fields.required=Velden met een * zijn verplicht
 form.all.fields.required=Alle velden zijn verplicht
@@ -112,9 +119,24 @@ page.login.rememberme=Onthoud mij
 page.login.usernamepassword=Gebruikersnaam en wachtwoord
 page.login.usernamepassword.fail=De gebruikersnaam of het wachtwoord is incorrect.
 page.login.usernamepassword.login=Inloggen
+page.login.forgot.password=Password  reminder
+page.login.forgot.password.label=Password  reminder
+page.login.forgot.password.button=Request new password
+page.login.forgot.username=Username  reminder
+page.login.forgot.username.label=Username  reminder
+page.login.forgot.username.button=Request username
 
 page.newaccount.title=Nieuw account applicatie
 page.newaccount.button=Cre\u00EBer account
+
+page.newpassword.title=Request new password
+page.newpassword.email.sent=An email has been sent to {0}.
+page.newpassword.email.sent.login=Click here to login
+page.newpassword.password.button=Request new password
+page.newpassword.password.title=Request new password
+page.newpassword.username.title=Request username
+
+page.retrieveusername.title=Request your username
 
 page.store.title=Widgetwinkel
 page.store.search=Zoek in de widgetwinkel
