RAVE-264: Featured Widgets
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1294746 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -83,6 +83,7 @@ page.general.addpage.layout.columns_3_newuser=Three Columns (new user)
 page.general.addpage.layout.columns_4=Four Columns
 page.general.addpage.layout.columns_3nwn_1_bottom=Four Columns (narrow/wide/narrow/bottom)
 page.general.addpage.selectlayout=Select Page Layout:
+page.general.checkBox.featured=Featured
 
 page.getWidgetMetadata.button=Get widget metadata
 page.updateWidgetMetadata.button=Update widget metadata
