--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -85,6 +85,7 @@ page.general.addpage.layout.columns_3_newuser=Drie kolommen (nieuwe gebruiker)
 page.general.addpage.layout.columns_4=Vier kolommen
 page.general.addpage.layout.columns_3nwn_1_bottom=Vier kolommen (smal/breed/smal/beneden)
 page.general.addpage.selectlayout=Selecteer paginaindeling:
+page.general.checkBox.featured=Prominent
 
 page.getWidgetMetadata.button=Haal widget metadata op
 page.updateWidgetMetadata.button=Update widget metadata op
