RAVE-493 fix the machine translations.
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1295442 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -208,6 +208,10 @@ page.personProfile.widgets=Widgets
 page.personProfile.widgets.page=/WEB-INF/jsp/views/profile_widgets.jsp
 page.personProfile.find.friends=Find Friends
 page.personProfile.friends.page=/WEB-INF/jsp/views/profile_friend_finder.jsp
+page.personProfile.edit=Edit
+page.personProfile.edit.option=Edit your profile here
+page.personProfile.save=Save
+page.personProfile.cancel=Cancel
 
 admin.home.title=Rave admin interface
 admin.home.shorttitle=Home
@@ -341,3 +345,4 @@ _rave_client.widget.prefs.required.title=* indicates a required input
 _rave_client.widget.provider.error=This widget type is currently unsupported.  Check with your administrator and be sure the correct provider is registered.
 _rave_client.widget.remove_confirm=Are you sure you want to remove this widget from your page?
 _rave_client.widget.users.added_by=has been added by...
+
