--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -29,15 +29,15 @@ password.invalid.length=Wachtwoord moet minimaal 4 tekens lang zijn
 confirmPassword.required=Wachtwoord bevestigen verplicht
 confirmPassword.mismatch=Wachtwoord komt niet overeen
 
-email.required=Email verplicht
-email.invalid=Dit is geen geldig email adres
-email.exists=Dit email adres bestaat al voor een gebruiker
-email.doesnot.exist=Dit email adres bestaat niet
-account.invalid=Invalid account. Please contact administrator.
+email.required=E-mail verplicht
+email.invalid=Dit is geen geldig e-mail adres
+email.exists=Dit e-mail adres bestaat al voor een gebruiker
+email.doesnot.exist=Dit e-mail adres bestaat niet
+account.invalid=Ongeldig account. Neem contact op met de beheerder.
 
-page.changepassword.button=Verander password
-page.changepassword.title=Verander password
-page.changepassword.expired=Request to change your password is either invalid or has been expired. Please request another password reminder.
+page.changepassword.button=Wijzig wachtwoord
+page.changepassword.title=Wijzig wachtwoord
+page.changepassword.expired=Het verzoek om het wachtwoord te wijzigen is ongeldig of verlopen. Vraag opnieuw een wachtwoordherinnering aan.
 
 
 form.some.fields.required=Velden met een * zijn verplicht
@@ -53,8 +53,8 @@ page.general.back=Terug naar Rave
 page.general.addnewpage=Voeg een nieuwe pagina toe
 page.general.confirmpassword=Bevestig wachtwoord:
 page.general.deletepage=Verwijder pagina
-page.general.editpage=Pas Pagina aan
-page.general.email=Email adres:
+page.general.editpage=Pas pagina aan
+page.general.email=E-mail adres\:
 page.general.empty=Voeg widgets aan deze pagina toe
 page.general.logout=Uitloggen
 page.general.movepage=Verplaats pagina
@@ -62,13 +62,13 @@ page.general.movethispage=Verplaats deze pagina:
 page.general.movethispage.after=Na {0}
 page.general.movethispage.tofirst=Naar eerste tab
 page.general.password=Wachtwoord:
-page.general.screenshot=screenshot
+page.general.screenshot=schermafbeelding
 page.general.title=Rave
 page.general.thumbnail=miniatuur
 page.general.toadmininterface=Beheeromgeving
 page.general.username=Gebruikersnaam:
-page.general.login.information=Treden Login Informatie
-page.general.personal.information=Treden persoonlijke informatie (optioneel)
+page.general.login.information=Voer inloggegevens in
+page.general.personal.information=Voer persoonlijke informatie in (optioneel)
 page.general.first.name=Voornaam: 
 page.general.last.name=Achternaam: 
 page.general.display.name=Naam gezien door andere gebruikers: 
@@ -88,7 +88,7 @@ page.general.addpage.selectlayout=Selecteer paginaindeling:
 page.general.checkBox.featured=Prominent
 
 page.getWidgetMetadata.button=Haal widget metadata op
-page.updateWidgetMetadata.button=Update widget metadata op
+page.updateWidgetMetadata.button=Werk widget metadata bij
 
 page.home.title=Home
 page.mobile_home.title=Home
@@ -120,24 +120,24 @@ page.login.rememberme=Onthoud mij
 page.login.usernamepassword=Gebruikersnaam en wachtwoord
 page.login.usernamepassword.fail=De gebruikersnaam of het wachtwoord is incorrect.
 page.login.usernamepassword.login=Inloggen
-page.login.forgot.password=Password  reminder
-page.login.forgot.password.label=Password  reminder
-page.login.forgot.password.button=Request new password
-page.login.forgot.username=Username  reminder
-page.login.forgot.username.label=Username  reminder
-page.login.forgot.username.button=Request username
+page.login.forgot.password=Wachtwoord vergeten
+page.login.forgot.password.label=Wachtwoord herinnering
+page.login.forgot.password.button=Vraag nieuw wachtwoord aan
+page.login.forgot.username=Gebruikersnaam herinnering
+page.login.forgot.username.label=Gebruikersnaam herinnering
+page.login.forgot.username.button=Vraag gebruikersnaam op
 
-page.newaccount.title=Nieuw account applicatie
+page.newaccount.title=Nieuw account aanmaken
 page.newaccount.button=Cre\u00EBer account
 
-page.newpassword.title=Request new password
-page.newpassword.email.sent=An email has been sent to {0}.
-page.newpassword.email.sent.login=Click here to login
-page.newpassword.password.button=Request new password
-page.newpassword.password.title=Request new password
-page.newpassword.username.title=Request username
+page.newpassword.title=Vraag nieuw wachtwoord aan
+page.newpassword.email.sent=Een e-mail is verzonden naar {0}.
+page.newpassword.email.sent.login=Klik hier om in te loggen
+page.newpassword.password.button=Vraag nieuw wachtwoord aan
+page.newpassword.password.title=Vraag nieuw wachtwoord aan
+page.newpassword.username.title=Vraag gebruikersnaam op
 
-page.retrieveusername.title=Request your username
+page.retrieveusername.title=Vraag uw gebruikersnaam op
 
 page.store.title=Widgetwinkel
 page.store.search=Zoek in de widgetwinkel
@@ -148,11 +148,11 @@ page.store.list.search.noresult=Geen widgets gevonden voor ''{0}''
 page.store.list.search.result.x.to.y={0} - {1} van {2} widgets getoond welke overeenkomen met ''{3}''
 page.store.list.widgets.mine=Mijn widgets
 page.store.list.widgets.all=Alle widgets
-page.store.list.widgets.tag= Door  Tag:
+page.store.list.widgets.tag= Op label\:
 page.store.list.widgets.category= Op categorie:
 
-page.userprofile.title=Update gebruikersprofiel
-page.userprofile.button=Update profiel
+page.userprofile.title=Werk gebruikersprofiel bij
+page.userprofile.button=Werk profiel bij
 page.userprofile.openid.url=OpenID URL:
 
 page.widget.title=Widgetdetail
@@ -175,54 +175,54 @@ page.widget.tags.select=Selecteer uit lijst:
 page.addwidget.title=Voeg nieuwe widget toe
 page.addwidget.form.header=Widget
 page.addwidget.form.submit=Voeg widget toe
-page.addwidget.result.exists=Deze widget bestaat al
+page.addwidget.result.exists=Deze widget bestaat al.
 page.addwidget.result.success=De widget is succesvol toegevoegd.
 
 page.profile.title=Profiel van {0}
 page.profile.personal.info=Persoonsgegevens
 page.profile.first.name=Voornaam: 
 page.profile.last.name=Achternaam: 
-page.profile.display.name=Naam te bezien: 
+page.profile.display.name=Volledige naam\:
 page.profile.basic.info=Algemene informatie
 page.profile.about.me=Over mij: 
 page.profile.status=Burgerlijke staat: 
 page.profile.contact.info=Contact informatie
 page.profile.email=E-mail: 
-page.profile.posts=Posten
+page.profile.posts=Berichten
 page.profile.posts.page=/WEB-INF/jsp/views/profile_posts.jsp
 page.profile.about=Over mij
 page.profile.about.page=/WEB-INF/jsp/views/profile_about.jsp
 page.profile.widgets=Widgets
 page.profile.widgets.page=/WEB-INF/jsp/views/profile_widgets.jsp
-page.profile.find.friends=Vinden vrienden
+page.profile.find.friends=Vind vrienden
 page.profile.friends.page=/WEB-INF/jsp/views/profile_friend_finder.jsp
-page.profile.edit=Hun
-page.profile.edit.option=Hun uw profiel hier
-page.profile.save=Behalve
-page.profile.cancel=annuleren
+page.profile.edit=Bewerk
+page.profile.edit.option=Bewerk uw profiel hier
+page.profile.save=Bewaar
+page.profile.cancel=Annuleer
 
 page.personProfile.title=Profiel van {0}
 page.personProfile.personal.info=Persoonsgegevens
 page.personProfile.first.name=Voornaam: 
 page.personProfile.last.name=Achternaam: 
-page.personProfile.display.name=Naam te bezien: 
+page.personProfile.display.name=Volledige naam\:
 page.personProfile.basic.info=Algemene informatie
 page.personProfile.about.me=Over mij: 
 page.personProfile.status=Burgerlijke staat: 
 page.personProfile.contact.info=Contact informatie
 page.personProfile.email=E-mail: 
-page.personProfile.posts=Posten
+page.personProfile.posts=Berichten
 page.personProfile.posts.page=/WEB-INF/jsp/views/profile_posts.jsp
 page.personProfile.about=Over mij
 page.personProfile.about.page=/WEB-INF/jsp/views/profile_about.jsp
 page.personProfile.widgets=Widgets
 page.personProfile.widgets.page=/WEB-INF/jsp/views/profile_widgets.jsp
-page.personProfile.find.friends=Vinden vrienden
+page.personProfile.find.friends=Vind vrienden
 page.personProfile.friends.page=/WEB-INF/jsp/views/profile_friend_finder.jsp
-page.personProfile.edit=Hun
-page.personProfile.edit.option=Hun uw profiel hier
-page.personProfile.save=Behalve
-page.personProfile.cancel=annuleren
+page.personProfile.edit=Bewerk
+page.personProfile.edit.option=Bewerk uw profiel hier
+page.personProfile.save=Bewaar
+page.personProfile.cancel=Annuleer
 
 admin.home.title=Rave admin interface
 admin.home.shorttitle=Home
@@ -233,8 +233,8 @@ admin.widgets.title=Rave admin interface - Widgets
 admin.widgets.shorttitle=Widgets
 admin.users.title=Rave admin interface - Gebruikers
 admin.users.shorttitle=Gebruikers
-admin.users.search=Zoek Gebruikers
-admin.users.add=Voeg Gebruiker toe
+admin.users.search=Zoek gebruikers
+admin.users.add=Voeg gebruiker toe
 admin.userdetail.title=Rave admin interface - Gebruiker details
 admin.userdetail.goback=\u00AB Terug naar gebruikers
 admin.userdetail.editdata=Pas gebruikers gegevens aan
@@ -243,12 +243,12 @@ admin.userdetail.action.delete.confirm=Ja, ik wil deze gebruiker verwijderen
 admin.userdetail.action.delete.confirm.required=Checkbox moet aangevinkt zijn
 admin.userdetail.action.update.success=Het gebruikersprofiel is bijgewerkt
 admin.userdata.username=Gebruikersnaam
-admin.userdata.email=Email
+admin.userdata.email=E-mail
 admin.userdata.accountstatus=Account status:
 admin.userdata.enabled=Account ingeschakeld
 admin.userdata.expired=Account verlopen
 admin.userdata.locked=Account op slot
-admin.userdata.authorities=Authoriteiten:
+admin.userdata.authorities=Autoriteiten\:
 admin.widgets.search=Zoek widgets
 admin.widgets.search.choosetype=Kies Type...
 admin.widgets.search.choosestatus=Kies Status...
@@ -268,20 +268,20 @@ admin.preferencedetail.pageSize.malformed=Voer een geheel getal in groter dan 0
 admin.preferencedetail.updateButton=Wijzig voorkeuren
 admin.preferencedetail.action.update.success=De voorkeuren zijn bijgewerkt
 admin.preferencedetail.goback=\u00AB Terug naar overzicht
-admin.categories.title=Rave admin interface - Categorieen
-admin.category.shortTitle=Categorieen
+admin.categories.title=Rave admin interface - Categorie\u00EBn
+admin.category.shortTitle=Categorie\u00EBn
 admin.category.create=Categorie aanmaken
 admin.category.delete=Verwijder categorie
 admin.category.update=Updaten categorie
 admin.categoryData.text=Tekst
 admin.categoryData.createdDate=Aanmaakdatum
 admin.categoryData.createdBy=gemaakt door
-admin.categoryData.modifiedDate=datum Gewijzigd
+admin.categoryData.modifiedDate=Wijzigingsdatum
 admin.categoryData.modifiedBy=aangepast door
 admin.categoryDetail.action.update.success=Categorie bijgewerkt
 admin.categoryDetail.action.delete.success=Categorie verwijderd
 admin.categoryDetail.action.create.success=Categorie aangemaakt
-admin.categoryDetail.goback=\u00ab Terug naar categorieen
+admin.categoryDetail.goback=\u00ab Terug naar categorie\u00EBn
 admin.categoryDetail.action.delete.confirm=Ja, ik wil deze categorie wilt verwijderen
 admin.categoryDetail.editData=Wijzig de categorie van gegevens
 admin.categoryDetail.label.text=Tekst:
@@ -296,7 +296,7 @@ admin.list.search.result.x.to.y={0} - {1} van {2} resultaten getoond welke overe
 
 widget.author=Eigenaar
 widget.authorEmail=E-mail adres eigenaar
-widget.categories=Categorieen:
+widget.categories=Categorie\u00EBn:
 widget.description=Beschrijving
 widget.description.required=Beschrijving is verplicht
 widget.disableRendering=Schakel widget uit
@@ -339,20 +339,20 @@ _rave_client.api.error=Rave is een fout opgetreden tijdens een poging om de serv
 _rave_client.api.rpc.error.invalid_params=Rave geprobeerd de server met uw recente wijzigingen bij te werken, maar de veranderingen waren geweigerd door de server als ongeldig.
 _rave_client.api.rpc.error.internal=Rave geprobeerd de server met uw recente wijzigingen bij te werken, maar de server heeft een interne fout.
 _rave_client.api.widget_metadata.invalid_params=Zowel de url en het type zijn nodig om de metadata te krijgen
-_rave_client.api.widget_metadata.parse_error=Kan Widget parsen voor haar metadata.\n\nControleer te controleren of de url verwijst naar een geldige Widget van de opgegeven type.
+_rave_client.api.widget_metadata.parse_error=Kan de metadata van de Widget niet inlezen.nnControleer of de URL verwijst naar een geldige Widget van het opgegeven type.
 _rave_client.common.add=Toevoegen
 _rave_client.common.cancel=Annuleren
 _rave_client.common.move=Bewegen
-_rave_client.common.save=Besparen
-_rave_client.common.update=Updaten
+_rave_client.common.save=Bewaren
+_rave_client.common.update=Bijwerken
 _rave_client.form.password.invalid_match=Het wachtwoord komt niet overeen
-_rave_client.opensocial.render_error=Kan OpenSocial Gadget maken:
-_rave_client.page.add=Voeg een nieuwe pagina
+_rave_client.opensocial.render_error=Kan OpenSocial Gadget niet weergeven\:
+_rave_client.page.add=Voeg een nieuwe pagina toe
 _rave_client.page.duplicate_name=Een pagina met die naam bestaat al
-_rave_client.page.update=Update-pagina
+_rave_client.page.update=Werk pagina bij
 _rave_client.widget.add_prefix=De widget
 _rave_client.widget.add_suffix= is toegevoegd aan uw pagina
-_rave_client.widget.prefs.required.title=* geeft een vereist ingang
-_rave_client.widget.provider.error=Deze widget type is momenteel niet ondersteund. Neem contact op met uw beheerder en zorg ervoor dat de juiste provider is geregistreerd.
-_rave_client.widget.remove_confirm=Weet je zeker dat je deze widget te verwijderen van uw pagina?
+_rave_client.widget.prefs.required.title=* is een verplicht veld
+_rave_client.widget.provider.error=Dit type widget wordt momenteel niet ondersteund. Neem contact op met uw beheerder en zorg ervoor dat de juiste provider is geregistreerd.
+_rave_client.widget.remove_confirm=Weet u zeker dat u deze widget wilt verwijderen van uw pagina?
 _rave_client.widget.users.added_by=is toegevoegd door...
