RAVE-375 Create user from Admin interface. Patch submitted by Marijan Milicevic
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1296305 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -238,6 +238,7 @@ admin.userdata.enabled=Account enabled
 admin.userdata.expired=Account expired
 admin.userdata.locked=Account locked
 admin.userdata.authorities=Authorities:
+admin.newaccount.title=Create new account
 admin.widgets.search=Search Widgets
 admin.widgets.search.choosetype=Choose Type...
 admin.widgets.search.choosestatus=Choose Status...
