--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -249,6 +249,7 @@ admin.userdata.enabled=Account ingeschakeld
 admin.userdata.expired=Account verlopen
 admin.userdata.locked=Account op slot
 admin.userdata.authorities=Autoriteiten\:
+admin.newaccount.title=Nieuwe gebruiker aanmaken
 admin.widgets.search=Zoek widgets
 admin.widgets.search.choosetype=Kies Type...
 admin.widgets.search.choosestatus=Kies Status...
