RAVE-411 Provide feedback when user is successfully created Redirect to users list after adding a user from the admin view Allow viewing rave_client_messages.js without logging in
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1297649 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -118,6 +118,7 @@ page.login.forgot.username.button=Request username
 
 page.newaccount.title=New Account Application
 page.newaccount.button=Create Account
+page.newaccount.message.created=Account successfully created
 
 page.newpassword.title=Request new password
 page.newpassword.email.sent=An email has been sent to {0}.
@@ -125,6 +126,7 @@ page.newpassword.email.sent.login=Click here to login
 page.newpassword.password.button=Request new password
 page.newpassword.password.title=Request new password
 page.newpassword.username.title=Request username
+page.newpassword.message.success=Password successfully changed
 
 page.retrieveusername.title=Request your username
 
@@ -143,6 +145,7 @@ page.store.list.widgets.category=By Category:
 page.userprofile.title=Update user profile
 page.userprofile.button=Update profile
 page.userprofile.openid.url=OpenID URL:
+page.userprofile.message.success=User profile successfully updated
 
 page.widget.title=Widget Detail
 page.widget.addToPage=Add to Page
