--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -129,6 +129,7 @@ page.login.forgot.username.button=Vraag gebruikersnaam op
 
 page.newaccount.title=Nieuw account aanmaken
 page.newaccount.button=Cre\u00EBer account
+page.newaccount.message.created=Account is aangemaakt
 
 page.newpassword.title=Vraag nieuw wachtwoord aan
 page.newpassword.email.sent=Een e-mail is verzonden naar {0}.
@@ -136,6 +137,7 @@ page.newpassword.email.sent.login=Klik hier om in te loggen
 page.newpassword.password.button=Vraag nieuw wachtwoord aan
 page.newpassword.password.title=Vraag nieuw wachtwoord aan
 page.newpassword.username.title=Vraag gebruikersnaam op
+page.newpassword.message.success=Uw wachtwoord is gewijzigd
 
 page.retrieveusername.title=Vraag uw gebruikersnaam op
 
@@ -154,6 +156,7 @@ page.store.list.widgets.category= Op categorie:
 page.userprofile.title=Werk gebruikersprofiel bij
 page.userprofile.button=Werk profiel bij
 page.userprofile.openid.url=OpenID URL:
+page.userprofile.message.success=Uw gebruikersprofiel is bijgewerkt
 
 page.widget.title=Widgetdetail
 page.widget.addToPage=Voeg toe aan pagina
