RAVE-492 Add ability to import w3c widgets using the "add widget" page. Patch made by Paul Sharples (psharples).
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1299768 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -48,6 +48,7 @@ page.error.reload=reloading
 page.error.details=technical details
 
 page.general.back=Back to Rave
+page.general.browse=Browse
 page.general.addnewpage=Add a New Page
 page.general.confirmpassword=Confirm password:
 page.general.deletepage=Delete Page
