--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -50,6 +50,7 @@ page.error.reload=herladen
 page.error.details=Technische details
 
 page.general.back=Terug naar Rave
+page.general.browse=Blader
 page.general.addnewpage=Voeg een nieuwe pagina toe
 page.general.confirmpassword=Bevestig wachtwoord:
 page.general.deletepage=Verwijder pagina
