RAVE-510 use localized date format Use capitals for the dutch column labels indenting with spaces instead of tabs
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1299841 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -280,9 +280,9 @@ admin.category.delete=Verwijder categorie
 admin.category.update=Updaten categorie
 admin.categoryData.text=Tekst
 admin.categoryData.createdDate=Aanmaakdatum
-admin.categoryData.createdBy=gemaakt door
+admin.categoryData.createdBy=Aangemaakt door
 admin.categoryData.modifiedDate=Wijzigingsdatum
-admin.categoryData.modifiedBy=aangepast door
+admin.categoryData.modifiedBy=Aangepast door
 admin.categoryDetail.action.update.success=Categorie bijgewerkt
 admin.categoryDetail.action.delete.success=Categorie verwijderd
 admin.categoryDetail.action.create.success=Categorie aangemaakt
