RAVE-531: Maven configuration and versions updates for TLP See: https://issues.apache.org/jira/browse/RAVE-531 - a few more rave website link fixes
git-svn-id: https://svn.apache.org/repos/asf/rave/trunk@1306638 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -232,7 +232,7 @@ admin.home.title=Rave admin interface
 admin.home.shorttitle=Home
 admin.home.subtitle=Welkom in de Rave admin interface
 admin.home.intro=<p>Voor hulp, ga naar de \
-  <a href="http://incubator.apache.org/rave/documentation/admin-interface.html">documentatie site</a> (Engels).</p>
+  <a href="http://rave.apache.org/documentation/admin-interface.html">documentatie site</a> (Engels).</p>
 admin.widgets.title=Rave admin interface - Widgets
 admin.widgets.shorttitle=Widgets
 admin.users.title=Rave admin interface - Gebruikers
