RAVE-522: Administrative Preference to choose which JavaScript file to serve
git-svn-id: https://svn.apache.org/repos/asf/rave/trunk@1309125 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -259,6 +259,9 @@ admin.preferencedetail.title=Rave admin interface - Preferences
 admin.preferencedetail.titleSuffix=Page title suffix
 admin.preferencedetail.pageSize=Number of items per page (list)
 admin.preferencedetail.pageSize.malformed=Enter a whole number greater than 0
+admin.preferencedetail.javaScriptDebugMode=JavaScript Debug Mode
+admin.preferencedetail.javaScriptDebugMode.true=Enabled
+admin.preferencedetail.javaScriptDebugMode.false=Disabled
 admin.preferencedetail.updateButton=Update preferences
 admin.preferencedetail.action.update.success=Preferences have been updated
 admin.preferencedetail.goback=\u00ab Back to overview
