--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -270,6 +270,9 @@ admin.preferencedetail.title=Rave admin interface - Voorkeuren
 admin.preferencedetail.titleSuffix=Toevoeging pagina titel
 admin.preferencedetail.pageSize=Aantal items per pagina (lijst)
 admin.preferencedetail.pageSize.malformed=Voer een geheel getal in groter dan 0
+admin.preferencedetail.javaScriptDebugMode=JavaScript Debug Mode
+admin.preferencedetail.javaScriptDebugMode.true=Ingeschakeld
+admin.preferencedetail.javaScriptDebugMode.false=Uitgeschakeld
 admin.preferencedetail.updateButton=Wijzig voorkeuren
 admin.preferencedetail.action.update.success=De voorkeuren zijn bijgewerkt
 admin.preferencedetail.goback=\u00AB Terug naar overzicht
